--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,31 +2,30 @@ version: "3.9"
 
 services:
   evva-interface:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: evva-interface:latest
+    image: ghcr.io/${GHCR_OWNER:-snowoffice-adnan}/hos-evva-interface:${IMAGE_TAG:-latest}
+    pull_policy: always
 
     ports:
-      - "3000:3000"
+      - "${PORT:-3000}:3000"
 
-    # Load the per-client env file
+    # Per-tenant env file (e.g., /srv/evva/clients/acme/compose.env)
     env_file:
       - ${ENV_FILE}
 
-    # Mount the per-client certs
     volumes:
       - ${CERTS_DIR}:/run/certs:ro
 
     read_only: true
-    tmpfs: [ /tmp ]
-    security_opt: [ no-new-privileges:true ]
-    cap_drop: [ ALL ]
-
+    tmpfs:
+      - /tmp
+    security_opt:
+      - no-new-privileges:true
+    cap_drop:
+      - ALL
     restart: unless-stopped
 
     healthcheck:
-      test: [ "CMD-SHELL", "wget -qO- http://127.0.0.1:${PORT:-3000}/${API_PREFIX:-api/v1}/integrations/evva/xs3/reader-state >/dev/null 2>&1 || exit 1" ]
+      test: ["CMD-SHELL", "wget -qO- http://127.0.0.1:${PORT:-3000}/${API_PREFIX:-api/v1}/integrations/evva/xs3/reader-state >/dev/null 2>&1 || exit 1"]
       interval: 30s
       timeout: 3s
       start_period: 30s
